--- a/css/main.css
+++ b/css/main.css
@@ -169,7 +169,7 @@ header .container {
     padding: 80px 0 10px;
   }
   header .container .inner-container {
-    padding: 0 50px;
+    padding: 20px 50px;
   }
 }
 
